# Vulkanologi

./: .clang-format  .gitignore  .gitmodules  Application.cpp  Application.h  CMakeLists.txt  DESIGN.md  Makefile  README.md  Renderer.cpp  Renderer.h  Sounds.md  TODO.md  Vertice.h  VulkanDevice.cpp  VulkanTut.cpp  VulkanTut.sln  VulkanTut.vcxproj  VulkanTut.vcxproj.filters  Window.cpp  Window.h  build.sh  spawnpoints.py
.github/workflows/: windows_build.yml
shaders/: compile_shaders.bat  shader.vert
src/: Application.cpp  Application.h  Application.hpp  AssetManager.cpp  AssetManager.h  AssetManager.hpp  BehCamera.cpp  BehCamera.h  BehCamera.hpp  BehDescriptors.cpp  BehDescriptors.h  BehDescriptors.hpp  BehDevice.cpp  BehDevice.h  BehDevice.hpp  BehFrameInfo.h  BehFrameInfo.hpp  BehPipelines.cpp  BehPipelines.h  BehVkInit.cpp  BehVkTypes.h  BehVkTypes.hpp  CMakeLists.txt  Colors.hpp  Components.h  Components.hpp  Cube.cpp  Cube.h  DependentSystem.hpp  DescriptorSetManager.cpp  DescriptorSetManager.h  GlobalUbo.hpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particle.h  Path.cpp  (+33 more)
src/client/: Application.cpp  Application.hpp  CubeForce.cpp  CubeForce.hpp
src/curves/: Bezier.cpp  Bezier.h  Bezier.hpp  Curves.h  Curves.hpp  Interpolation.cpp  Interpolation.h  LinePath.cpp  LinePath.h  LinePath.hpp  Path.cpp  Path.h  Path.hpp  Spline.cpp  Spline.h
src/engine/: Application.cpp  Application.hpp  BehCamera.cpp  BehDescriptors.cpp  CMakeLists.txt  Components.hpp  Cube.cpp  Cube.hpp  Deletionqueue.hpp  DependentSystem.hpp  INetworkSystem.hpp  LoadCar.cpp  LoadCar.hpp  Mesh.cpp  Mesh.hpp  NetworkClientSystem.cpp  NetworkClientSystem.hpp  NetworkServerSystem.cpp  NetworkServerSystem.hpp  Physics.cpp  Physics.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsDebugDrawer.cpp  PhysicsDebugDrawer.hpp  Renderer.hpp  Sphere.hpp  SystemGraph.hpp  Util.cpp  WindowWrapper.hpp
src/engine/curves/: Path.hpp
src/engine/networking_handlers/: Handler.hpp  PhysicsHandler.cpp  PhysicsHandler.hpp
src/engine/systems/: CarSystem.cpp  CarSystem.hpp  ControllerSystem.cpp  ControllerSystem.hpp  DebugSystems.cpp  DebugSystems.hpp  Systems.cpp  TransformSystems.cpp  TransformSystems.hpp
src/listenerclient/: CMakeLists.txt  main.cpp
src/renderer/: AssetManager.cpp  AssetManager.hpp  BehCamera.cpp  BehCamera.hpp  BehDescriptors.cpp  BehDescriptors.hpp  BehDevice.cpp  BehDevice.hpp  BehFrameInfo.hpp  BehLight.hpp  BehPipelines.cpp  BehPipelines.hpp  BehVkInit.cpp  BehVkInit.hpp  BehVkTypes.hpp  CMakeLists.txt  Colors.hpp  Cube.cpp  Cube.hpp  Deletionqueue.hpp  GlobalUbo.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshHandle.cpp  MeshHandle.hpp  Particle.hpp  RenderObject.hpp  Renderer.cpp  Renderer.hpp  Sphere.hpp  WindowWrapper.cpp  WindowWrapper.hpp
src/renderer/curves/: Bezier.cpp  Bezier.hpp  Curves.hpp  LinePath.cpp  LinePath.hpp  Path.cpp  Path.hpp
src/renderer/imgui/: ImGuiCurve.cpp  ImGuiCurve.hpp
src/resources/: SPAWNPOINTS.TXT  arena.mtl  lost_empire-Alpha.ktx  lost_empire-RGB.ktx  lost_empire-RGBA.ktx  lost_empire.mtl  map.mtl  na_bil.mtl  rat.mtl  road.mtl  swiper_1.mtl  swiper_4.mtl  swiper_6.mtl  track.mtl
src/server/: CMakeLists.txt  main.cpp
src/shaders/: compile_shaders.sh  particle.frag  particle.vert  particles.comp  point_light.frag  point_light.vert  shader.frag  shader.vert  shader_unlit.frag  shader_unlit.vert  shader_unlit_line.frag  shader_unlit_line.vert  skybox.frag  skybox.vert
src/shaders/utils/: global_ubo.glsl
src/shared/: CMakeLists.txt  SharedServerSettings.hpp  Util.cpp  Util.hpp
src/shared/curves/: Interpolation.cpp  Path.cpp
src/systems/: CarSystem.cpp  CarSystem.h  CarSystem.hpp  ControllerSystem.cpp  ControllerSystem.h  ControllerSystem.hpp  SwiperSystem.cpp  SwiperSystem.hpp  Systems.cpp  Systems.hpp  TransformSystems.cpp  TransformSystems.hpp
